# synapse-app

./: .env.example  .gitignore  QUICK_START.md  SETUP.md  check-preview.sh  package-lock.json  package.json  vercel.json  verify-structure.sh
app/api/blob/upload/: route.ts
app/api/chat/: route.ts
backend/: .env.example  Dockerfile  main.py  pyproject.toml  railway.toml  schema.sql
backend/app/: config.py  llm.py  main.py
backend/app/agent/: checkpointer.py  graph.py  llm.py  state.py  tools.py
backend/app/agent/nodes/: load_context.py  onboarding.py  review.py  route.py  session.py  update_memory.py
backend/app/api/: chat.py  upload.py
backend/app/memory/: fsrs.py  mem0_client.py  pdf.py  vector.py
backend/app/workers/: scheduler.py  sleep_agent.py
components/chat/: ChatWindow.tsx
frontend/app/api/chat/: route.ts
frontend/components/chat/: ChatWindow.tsx
